<resources>
    <string name="app_name">Panzer War Game Helper</string>
    <string name="action_settings">Setting</string>
    <string name="select_fileTip">Click right-bottom button to select local mod to install.</string>
    <string name="view_mods">Click to view installed mods</string>
    <string name="invalidFile">Invalid File</string>
    <string name="lanuchGame">Lanuch Game</string>
    <string name="folder_not_found">Folder not found.Plz ensure you have installed Panzer War.</string>
    <string name="select_file_path">Select File:</string>
    <string name="downloadModBtn">Download Mods</string>
    <string name="joinChatBtn">Join QQ Chat Group</string>
    <string name="copy_failed">Ops! Copy file failed.</string>
    <string name="copy_success">Copy File Succeed!</string>
    <string name="view_blog">View News</string>
    <string name="title_downloadlink_list">Download Link</string>
    <string name="title_downloadlink_detail">"Detail "</string>
    <string name="NoFolder">No Folder</string>
    <string name="NoFile">Not installed</string>
    <string name="Downloaded">Downloaded</string>
    <string name="Installed">Installed</string>
    <string name="LoadingList">Loading...</string>
    <string name="DownloadComplete">Download Complete! Launch game to enjoy it!</string>
    <string name="downloadInitalize">Initialize Downloading...</string>
    <string name="editTime">Edit Time:</string>
    <string name="description">Description:</string>
    <string name="size">Size:</string>
    <string name="author">Author:</string>
    <string name="DownloadType">Click Red Button to download!</string>
    <string name="InstallFailedInvalidName">Invalid Name! Do not contain strings like (1) in the file name!</string>
    <string name="InstallFailedInvalidPlatform">Invalid Platform!Download Android version modpack plz!</string>
    <string name="InstallPaidMod">Warning!You are install a paid mod which requre a key to active to use!</string>
    <string name="InstallFailedInvalid">Invalid Mod File!</string>
    <string name="pickFile">pickFile</string>
    <string name="downloadFile">Download</string>
    <string name="linkRefresh">Refresh</string>
    <string name="joinGroup">Join group</string>
    <string name="checkVersion">Update Version</string>
    <string name="uninstall"> Unistall</string>
    <string name="download_tip">The tool can only download free version of Panzer War in China.</string>
    <string name="download_game_btn">Download Game</string>
    <string name="update_log_btn">Check Update Log</string>
    <string name="local_version">Local Version: </string>
    <string name="server_version">Server Version: </string>
    <string name="install_permission">Please give this app permission to install apks.</string>
    <string name="view_community">View Community</string>
    <string name="progress">Progress</string>
</resources>
