<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/downloadModBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadModBtn" />

        <Button
            android:id="@+id/joinChatBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joinChatBtn" />

        <Button
            android:id="@+id/viewModBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_mods" />

        <Button
            android:id="@+id/lanuchGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lanuchGame" />

        <TextView
            android:id="@+id/pathLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_fileTip" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>